[#OD-1987] Fixed text wrap issue, [#OD-1988] Fixed dashboard block layout issue
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@44769 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/portal/src/main/static/src/_dashboard.scss
+++ b/portal/src/main/static/src/_dashboard.scss
@@ -31,8 +31,10 @@
   .about-class, .class-map {
     height: 100%;
     padding: 20px;
-    @include responsive($media-small) {
-      width: 50%;
+    width: 50%;
+    .text-overflow.next-session-title {
+      height: auto;
+      max-height: 110px;
     }
   }
 
@@ -235,6 +237,10 @@
         color: black;
         display: inline-block;
         width: 80%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        vertical-align: middle;
       }
 
       .glyphicon-file {
